Fix styling in dark mode

--- a/src/theme/Editor.css
+++ b/src/theme/Editor.css
@@ -55,29 +55,6 @@
   width: 2rem;
 }
 
-.editor__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  border: none;
-
-  color: var(--ifm-color-gray-100);
-  background-color: var(--ifm-color-gray-700);
-
-  border-radius: var(--ifm-global-radius);
-  height: 2rem;
-}
-
-.editor__button:hover {
-  background-color: var(--ifm-color-gray-600);
-}
-
-.editor__button:disabled {
-  color: var(--ifm-color-gray-500);
-  background-color: var(--ifm-color-gray-800);
-}
-
 .editor__icon {
   font-family: 'Material Icons';
   font-size: 1.25rem;
@@ -108,6 +85,7 @@
 }
 
 .editor__page {
+  color: var(--ifm-color-gray-1000);
   background-color: var(--ifm-color-gray-100);
   flex-grow: 1;
   overflow-y: auto;
@@ -120,12 +98,17 @@
   background-color: var(--ifm-color-gray-0);
 }
 
+.editor .button {
+  color: var(--ifm-color-gray-0);
+}
+
 .codeblock {
   background-color: var(--ifm-color-gray-100);
   border-radius: var(--ifm-global-radius);
 }
 
 .codeblock__language {
+  color: var(--ifm-color-gray-1000);
   background-color: var(--ifm-color-gray-200);
   cursor: pointer;
   height: 2rem;
@@ -137,6 +120,11 @@
   font-family: var(--ifm-font-family-base);
   font-size: var(--ifm-code-font-size);
   font-weight: 500;
+}
+
+.codeblock__code, code {
+  background-color: var(--ifm-color-gray-100);
+  border-color: var(--ifm-color-gray-100);
 }
 
 .editor__announcements {
